force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/ucinn_ascendv2__Matching_Challenge__c.object-meta.xml
<CustomObject>
    <description>Specifies a challenge that when met the donor will make a donation/payment onto the challenge</description>
    <label>Matching Challenge</label>
    <nameField>
        <label>Matching Challenge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>