force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Amount_Until_Goal_Met_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Until_Goal_Met_Formula__c</fullName>
    <description>How much until the goal amount is met</description>
    <formula>IF(ucinn_ascendv2__Goal_Amount__c &gt; 0, IF(ISPICKVAL(ucinn_ascendv2__Summary_to_Use__c , &apos;Payment Amount&apos;),
IF((ucinn_ascendv2__Goal_Amount__c - ucinn_ascendv2__Relation_Amount_Paid_To_Date_Roll_Up__c &gt; 0),(ucinn_ascendv2__Goal_Amount__c - ucinn_ascendv2__Relation_Amount_Paid_To_Date_Roll_Up__c), 0) ,
IF(ISPICKVAL(ucinn_ascendv2__Summary_to_Use__c , &apos;Opportunity Amount&apos;),
IF((ucinn_ascendv2__Goal_Amount__c - ucinn_ascendv2__Relation_Amount_Roll_Up__c &gt; 0), (ucinn_ascendv2__Goal_Amount__c - ucinn_ascendv2__Relation_Amount_Roll_Up__c), 0),
0)) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How much until the goal amount is met</inlineHelpText>
    <label>Amount Until Goal Met</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>