force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Campaign__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign to create the sponsor pledge and designation details.</description>
    <inlineHelpText>Campaign to create the sponsor pledge and designation details.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Matching Challenges</relationshipLabel>
    <relationshipName>Matching_Challenges_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>