force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designation to create the sponsor&apos;s pledge and designation detail.</description>
    <inlineHelpText>Designation to create the sponsor&apos;s pledge and designation detail.</inlineHelpText>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Matching Challenges</relationshipLabel>
    <relationshipName>Matching_Challenges_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>