force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__End_Date__c</fullName>
    <description>Date of which this challenge Ends.</description>
    <inlineHelpText>Date of which this challenge Ends.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>