force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Goal_Amount__c</fullName>
    <description>Amount of the challenge for the goal to be met.</description>
    <inlineHelpText>Amount of the challenge for the goal to be met.</inlineHelpText>
    <label>Goal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>