force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Is_Challenge_Valid_To_Process_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Challenge_Valid_To_Process_Formula__c</fullName>
    <description>Check to see if we can process the Challenge</description>
    <formula>IF( AND(ucinn_ascendv2__Amount_Until_Goal_Met_Formula__c == 0, ISPICKVAL(ucinn_ascendv2__Status__c, &apos;Active&apos;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check to see if we can process the Challenge</inlineHelpText>
    <label>Is Challenge Valid To Process</label>
    <type>Checkbox</type>
</CustomField>