force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Notes__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Notes__c</fullName>
    <description>Additional Notes for challenge</description>
    <inlineHelpText>Additional Notes for challenge</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>