force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Relation_Amount_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relation_Amount_Roll_Up__c</fullName>
    <description>Rollup summary using the Challenge Relation Amount.</description>
    <inlineHelpText>Rollup summary using the Challenge Relation Amount.</inlineHelpText>
    <label>Total Relation Amount</label>
    <summarizedField>ucinn_ascendv2__Matching_Challenge_Relation__c.ucinn_ascendv2__Amount__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Matching_Challenge_Relation__c.ucinn_ascendv2__Matching_Challenge__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>