force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Session__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Session to create the challenge sponsor&apos;s pledges, cannot create pledges if session is closed</description>
    <inlineHelpText>Session to create the challenge sponsor&apos;s pledges, cannot create pledges if session is closed</inlineHelpText>
    <label>Session</label>
    <referenceTo>ucinn_ascendv2__Session__c</referenceTo>
    <relationshipLabel>Matching Challenges</relationshipLabel>
    <relationshipName>Matching_Challenges_Session</relationshipName>
    <type>Lookup</type>
</CustomField>