force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Sponsor_Match_Amount_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sponsor_Match_Amount_Roll_Up__c</fullName>
    <description>Rollup of the sponsor amounts</description>
    <inlineHelpText>Rollup of the sponsor amounts</inlineHelpText>
    <label>Total Sponsors Match Amount</label>
    <summarizedField>ucinn_ascendv2__Matching_Challenge_Sponsor__c.ucinn_ascendv2__Match_Amount__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Matching_Challenge_Sponsor__c.ucinn_ascendv2__Matching_Challenge__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>