force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Start_Date__c</fullName>
    <description>Start Date of the challenge</description>
    <inlineHelpText>Start Date of the challenge</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>