force-app/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Summary_to_Use__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Summary_to_Use__c</fullName>
    <description>Which amount to use to see if the challenge is met.</description>
    <inlineHelpText>Which amount to use to see if the challenge is met.</inlineHelpText>
    <label>Summary to Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Amount</fullName>
                <default>true</default>
                <label>Opportunity Amount</label>
            </value>
            <value>
                <fullName>Payment Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>